improve security config to handle developpment and production context